Replace hugo mute shortcodes

--- a/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
+++ b/src/content/lessen/fysica/beweging/soorten_bewegingen/index.mdx
@@ -10,7 +10,7 @@ images: ['content/lessen/fysica/beweging/soorten_beweging/img/translatie_rotatie
 Om het concept *beweging* verder in te delen, maken we onderscheid tussen enkele **soorten bewegingen**. 👇
 
 ## Translatie en rotatie
-Eerst en vooral maken we een onderscheid tussen een **verandering in plaats** en een **verandering in stand**. Wanneer een voorwerp zich **verplaatst** ten opzichte van een ander voorwerp, spreken we van **translatie**. Wanneer {{< mute "het aangrijpingspunt van" >}} een voorwerp stilstaat, maar het voorwerp neemt een **andere oriëntatie** aan, dan spreekt men van **rotatie**. Ook een combinatie van beide is mogelijk.
+Eerst en vooral maken we een onderscheid tussen een **verandering in plaats** en een **verandering in stand**. Wanneer een voorwerp zich **verplaatst** ten opzichte van een ander voorwerp, spreken we van **translatie**. Wanneer <Mute text="het aangrijpingspunt van"/> een voorwerp stilstaat, maar het voorwerp neemt een **andere oriëntatie** aan, dan spreekt men van **rotatie**. Ook een combinatie van beide is mogelijk.
 
 Denk hierbij aan een bijl. We kunnen een bijl verplaatsen (**translatie**), draaien (**rotatie**) of werpen zoals een coole viking (**combinatie**). 🪓
 
