--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -7,7 +7,7 @@ description: "In deze les overlopen we enkele basisbegrippen in de meetkunde, zo
 tags: ["Meetkundige begrippen", "Rechten", "Vlakken"]
 images: []
 ---
-Vooraleer we de wondere wereld van de meetkunde {{< mute "of geometrie" >}} kunnen betreden 🗝️, moeten we enkele basisbegrippen kennen. Op deze kennis kunnen we vervolgens voortbouwen om de vormen en figuren die we tegenkomen wiskundig te beschrijven.
+Vooraleer we de wondere wereld van de meetkunde <Mute text="of geometrie"/> kunnen betreden 🗝️, moeten we enkele basisbegrippen kennen. Op deze kennis kunnen we vervolgens voortbouwen om de vormen en figuren die we tegenkomen wiskundig te beschrijven.
 
 ## Een punt in het vlak
 Een **punt** is het kleinste *deeltje* in de meetkunde. We stellen dit voor met **een stip** en benoemen het (wanneer we dat willen) **met een hoofdletter**.
@@ -43,7 +43,7 @@ Vaak denken mensen bij het woord **richting** aan links of rechts. In de wiskund
 {{< /expand >}}
 
 ## Wat is het verschil tussen een rechte en een lijnstuk?
-Een **lijnstuk** is, zoals doet vermoeden, een stuk van een lijn. 🤯 Meer bepaald: een lijn die **begrensd is door twee punten**. We **benoemen** het lijnstuk steeds naar zijn **grenspunten**. Dat zijn de **punten die het lijnstuk begrenzen**. Weet jij nu welke van volgende twee een lijnstuk is en welke een rechte {{< mute "of lijn" >}}? 🤔
+Een **lijnstuk** is, zoals doet vermoeden, een stuk van een lijn. 🤯 Meer bepaald: een lijn die **begrensd is door twee punten**. We **benoemen** het lijnstuk steeds naar zijn **grenspunten**. Dat zijn de **punten die het lijnstuk begrenzen**. Weet jij nu welke van volgende twee een lijnstuk is en welke een rechte <Mute text="of lijn"/>? 🤔
 
 ![Een lijnstuk is een lijn die stopt in punten. We noteren dit met twee rechte haakjes, eentje rond elk grenspunt: [AB]. Een rechte loopt doorheen de punten, zoals eerder reeds vermeld. We noteren geen vierkante haakjes, maar gewoon AB.](img/lijnstuk_rechte.png)
 
@@ -58,12 +58,12 @@ Tenslotte spreken we ook nog van een **drager**. Dit is de **rechte waarop het l
 ![Een overzicht van alle geziene notaties.](img/overzicht_notatie.png)
 
 ## Hoe noteer ik de lengte van een lijnstuk?
-Elk lijnstuk kunnen we **meten met een liniaal**. 📏 We meten dan eigenlijk **de afstand tussen de twee grenspunten**. In volgende lessen ga je nog zien hoe je de lengte van een lijnstuk {{< mute "oftewel de afstand tussen de twee grenspunten" >}} kan bereken uit andere gegevens, maar hoe moet je de bekomen lengte dan noteren?
+Elk lijnstuk kunnen we **meten met een liniaal**. 📏 We meten dan eigenlijk **de afstand tussen de twee grenspunten**. In volgende lessen ga je nog zien hoe je de lengte van een lijnstuk <Mute text="oftewel de afstand tussen de twee grenspunten"/> kan bereken uit andere gegevens, maar hoe moet je de bekomen lengte dan noteren?
 
 Vooraleer we de lengte van het lijnstuk kunnen noteren, moeten we **zeggen van welk lijnstuk** we de lengte hebben gemeten. We doen dit door de vierkante haakjes te vervangen door **verticale strepen**. De lengte van het lijnstuk [AB] noteren we dus als **|AB|** = ...
 
 Vervolgens noteren we de lengte na het gelijkheidsteken. Een getal alleen, zoals vier, zegt echter niets. Vier wat? Vier duimen? 👍 Vier poten? 🐾 Of vier konijntjes? 🐇 We hebben een **eenheid** nodig. In Europa, en eigenlijk bijna overal, werken we met het **metriek stelsel**. Ook in de wetenschap is dit het systeem bij voorkeur. 
-Alleen Engelsen, Amerikanen, Canadezen... doen een beetje moeilijk en werken met een ander systeem, {{< mute " namelijk het Brits-Amerikaanse maatsysteem of The Imperial System" >}}.
+Alleen Engelsen, Amerikanen, Canadezen... doen een beetje moeilijk en werken met een ander systeem, <Mute text=" namelijk het Brits-Amerikaanse maatsysteem of The Imperial System"/>.
 
 Het **metriek stelsel** ken je gegarandeerd. Ik noem enkele voorbeelden: centimeter (cm), kilogram (kg), seconden (s)... Klinkt het bekend in de oren? 👂
 > De [les over grootheden en eenheden](../../../fysica/grootheden_eenheden/intro) gaat dieper in op deze eenheden, zeker eens de moeite om te lezen!
@@ -90,9 +90,9 @@ $$M = mi[AB] \Leftrightarrow |AM| = |BM| \text{ en } M \in [AB] $$
 
 Wat wil dit nu precies zeggen? 🧐 Stap per stap gaan we erdoorheen! **M** is een hoofdletter en verwijst hier dus naar **een punt M**. Dan komen we mi[AB] tegen. Dat betekent **het midden van** het lijnstuk **[AB]**.
 
-Een dubbele wederzijdse pijl ($\Leftrightarrow$) betekent **als en slechts als**. Een punt M is dus het midden van [AB] **alleen als** er wordt voldaan aan wat er na de pijl komt. Die voorwaarde is dat de **afstand tussen het punt A en het punt B** ($|AM| = |BM|$) gelijk moet zijn en **M moet een element zijn van [AB]** {{< mute "(M moet op het lijnstuk [AB] liggen)" >}}.
+Een dubbele wederzijdse pijl ($\Leftrightarrow$) betekent **als en slechts als**. Een punt M is dus het midden van [AB] **alleen als** er wordt voldaan aan wat er na de pijl komt. Die voorwaarde is dat de **afstand tussen het punt A en het punt B** ($|AM| = |BM|$) gelijk moet zijn en **M moet een element zijn van [AB]** <Mute text="(M moet op het lijnstuk [AB] liggen)"/>.
 
-In welke van de drie onderstaande situaties is M het midden van het lijnstuk [AB]? {{< mute "Druk op 'toon uitleg' voor de uitkomst." >}}
+In welke van de drie onderstaande situaties is M het midden van het lijnstuk [AB]? <Mute text="Druk op 'toon uitleg' voor de uitkomst."/>
 
 ![Aan beide voorwaarden moet voldaan worden. De lengte tussen punt M en punten A en B moet gelijk zijn en M moet op het lijnstuk liggen (dezelfde drager).](img/definitie_midden.png)
 
