--- a/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/cirkels/index.mdx
@@ -28,7 +28,7 @@ Zowel het begrip straal als diameter heeft een **dubbele betekenis**. Enerzijds 
 ## Koorde en middellijn
 Een **koorde** is een **lijnstuk** dat **twee punten van de cirkel** verbindt. We kunnen onze definitie van de diameter dus lichtelijk aanpassen en gebruik maken van een koorde. De **diameter** is eigenlijk een koorde die door het middelpunt gaat.
 
-Daarnaast is er ook nog een **middellijn**. Dit is een **rechte** {{< mute "of lijn" >}} die **door het middelpunt** van de cirkel gaat. Een hoek waarvan het **hoekpunt** samenvalt met het **middelpunt**, noemt men een **middelpuntshoek**.
+Daarnaast is er ook nog een **middellijn**. Dit is een **rechte** <Mute text="of lijn"/> die **door het middelpunt** van de cirkel gaat. Een hoek waarvan het **hoekpunt** samenvalt met het **middelpunt**, noemt men een **middelpuntshoek**.
 
 ![Een illustratie van koorde, middellijn en middelpuntshoek.](img/koorde_middellijn.png)
 
