--- a/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
@@ -23,7 +23,7 @@ Zo is $\hat{B}$ de **overstaande hoek** van de zijde $[AC]$. Het is met andere w
 
 Eén van de bekendste en meest gebruikte eigenschappen in de (vlakke) meetkunde is deze van de **som van de hoeken van een driehoek**. De hoeken vormen namelijk altijd **180°**.
 
-Je kan dit **zelf testen** door een willekeurige driehoek te tekenen en vervolgens de hoeken af te knippen. ✂️ Wanneer je de hoeken vervolgens naast elkaar legt, zie je dat ze een **gestrekte hoek** {{< mute "of 180°" >}} vormen.
+Je kan dit **zelf testen** door een willekeurige driehoek te tekenen en vervolgens de hoeken af te knippen. ✂️ Wanneer je de hoeken vervolgens naast elkaar legt, zie je dat ze een **gestrekte hoek** <Mute text="of 180°"/> vormen.
 
 <Attention title="Som van de hoeken van een driehoek">
 
@@ -76,7 +76,7 @@ Driehoeken kunnen we op **twee manieren** classificeren. Enerzijds aan de hand v
 
 We spreken van een **scherphoekige driehoek** wanneer hij **drie scherpe hoeken** heeft. Een **rechthoekige driehoek** is een driehoek met **een rechte hoek** en op dezelfde manier is een **stomphoekige driehoek** een driehoek met **een stompe hoek**.
 
-Een **ongelijkzijdige** (of **ongelijkbenige**) **driehoek** is een driehoek met **drie verschillende, {{< mute "dus niet even lange," >}} zijden**. Een **gelijkbenige driehoek** is dan weer een driehoek met **twee gelijke zijden**, net zoals wij twee (ongeveer) gelijke benen hebben 🦵. De derde mogelijkheid is een **gelijkzijdige driehoek** met **drie gelijke zijden**.
+Een **ongelijkzijdige** (of **ongelijkbenige**) **driehoek** is een driehoek met **drie verschillende, <Mute text="dus niet even lange,"/> zijden**. Een **gelijkbenige driehoek** is dan weer een driehoek met **twee gelijke zijden**, net zoals wij twee (ongeveer) gelijke benen hebben 🦵. De derde mogelijkheid is een **gelijkzijdige driehoek** met **drie gelijke zijden**.
 
 ## Samengevat
 <Attention title="De driehoek">
