--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -10,7 +10,7 @@ images: []
 Wanneer twee lijnen elkaar snijden, dan doen ze dit onder een bepaalde **hoek**. Hoeken zijn belangrijk in alles wat met meetkunde te maken heeft, want ze vertellen iets over **de manier waarop** twee rechten, halfrechten of lijnstukken elkaar **snijden**. Daarnaast komen hoeken ook voor bij **draaiingen** 🥴, dus hou je goed vast!
 
 ## Wat is een hoek?
-**Hoeken** kom je overal tegen. Denk maar aan de letterlijke hoeken van een kamer of de hellingshoek {{< mute "ook gekend als de hellingsgraad" >}} van een skipiste. ⛷️🏂
+**Hoeken** kom je overal tegen. Denk maar aan de letterlijke hoeken van een kamer of de hellingshoek <Mute text="ook gekend als de hellingsgraad"/> van een skipiste. ⛷️🏂
 
 ![Twee skiërs gaan een piste af. Hoe hoger de hellingshoek, hoe steiler de helling.](img/ski_slope.png)
 
@@ -29,7 +29,7 @@ Om te beginnen kan je elke hoek opdelen in één van drie categorieën naargelan
 
 ![Scherpe hoeken zijn kleiner dan 90°, rechte hoeken zijn precies 90° en stompe hoeken zijn groter dan 90°.](img/soorten_hoeken_grootte.png)
 
-Daarnaast zijn er nog drie {{< mute "nieuwe" >}} termen: een **nulhoek**, **gestrekte hoek**, en **volle hoek**. 
+Daarnaast zijn er nog drie <Mute text="nieuwe"/> termen: een **nulhoek**, **gestrekte hoek**, en **volle hoek**. 
 
 ![Een nulhoek is een hoek van 0°, een gestrekte hoek is een hoek van 180° en een volle hoek eentje van 360°.](img/soorten_hoeken_speciaal.png)
 
@@ -54,7 +54,7 @@ Vooraleer je begint met dit toch te proberen, wil ik je waarschuwen: in 1836 hee
 {{< /expand >}}
 
 ## Het verband tussen hoeken en draaiingen 🥴
-Wanneer je een lijnstuk opneemt en **draait** {{< mute "(je zorgt er dus voor dat één punt, de as, op dezelfde plaats blijft liggen)">}}, dan **maak je** eigenlijk een **bepaalde hoek**. Meer nog, je draait iets steeds **onder een bepaalde hoek**.
+Wanneer je een lijnstuk opneemt en **draait** <Mute text="(je zorgt er dus voor dat één punt, de as, op dezelfde plaats blijft liggen)"/>, dan **maak je** eigenlijk een **bepaalde hoek**. Meer nog, je draait iets steeds **onder een bepaalde hoek**.
 
 ![Een draaiing onder een hoek van 30°.](img/draaiing.png)
 
