--- a/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
@@ -22,7 +22,7 @@ Bij een **ruit** en een **vierkant** is het zo dat de **vier zijden even lang** 
 
 Voor een **rechthoek** en **parallellogram** moet je nog een extra zijde meten. Je **meet** eerst **twee aanliggende zijden** (die een hoekpunt delen). Vervolgens **vermenigvuldig** je **elke zijde met twee**. Nu tel je beide op en je hebt je uitkomst. 🎉
 
-De **cirkel** is nog een geval apart. Hiervoor moet je de **straal** ($r$) meten en dit invullen in de formule $2 \cdot \pi \cdot r$. Hierbij is $\pi$ (pi) een {{< mute "irrationaal" >}} constant getal waarvoor je de waarde $3,14$ mag gebruiken.
+De **cirkel** is nog een geval apart. Hiervoor moet je de **straal** ($r$) meten en dit invullen in de formule $2 \cdot \pi \cdot r$. Hierbij is $\pi$ (pi) een <Mute text="irrationaal"/> constant getal waarvoor je de waarde $3,14$ mag gebruiken.
 
 ## Samengevat
 <Attention title="De omtrek van een figuur berekenen">
