--- a/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
@@ -10,11 +10,11 @@ images: []
 Als er een virus door de wereld raast 🦠, moeten we best anderhalve meter afstand houden. Wanneer we dus toch naar een concert gaan in een concertgebouw 🎵, dan heeft iedere persoon een **oppervlakte** van $2.25 \si{ m}^2$ nodig. Alleen zo krijgt het virus geen kans. 💪
 
 ## Wat is de oppervlakte?
-De **oppervlakte** {{< mute "A" >}} van een vlakke figuur is een **maat voor de grootte** ervan. Het vertelt ons **hoe groot** het gebied binnen de zijden is. Wanneer een vloerder nieuwe tegels wil leggen in je huis, dan moet hij de **oppervlakte** kennen om te berekenen hoeveel tegels hij nodig heeft. 
+De **oppervlakte** <Mute text="A"/> van een vlakke figuur is een **maat voor de grootte** ervan. Het vertelt ons **hoe groot** het gebied binnen de zijden is. Wanneer een vloerder nieuwe tegels wil leggen in je huis, dan moet hij de **oppervlakte** kennen om te berekenen hoeveel tegels hij nodig heeft. 
 
-Ongetwijfeld ken je al verschillende **oppervlaktematen**. Denk maar aan **cm², m² of ha** (= 10 000 m²). Wat opvalt is de **tweede macht** {{< mute "(uitgesproken als 'vierkante')" >}} die overal aanwezig is. Maar waarom? 🤔 
+Ongetwijfeld ken je al verschillende **oppervlaktematen**. Denk maar aan **cm², m² of ha** (= 10 000 m²). Wat opvalt is de **tweede macht** <Mute text="(uitgesproken als 'vierkante')"/> die overal aanwezig is. Maar waarom? 🤔 
 
-De reden is simpel: we **vermenigvuldigen twee afstandsmaten** {{< mute "(zoals cm of m)" >}} met elkaar om een oppervlakte te bekomen. Net zoals met getallen, kunnen we als volgt redeneren:
+De reden is simpel: we **vermenigvuldigen twee afstandsmaten** <Mute text="(zoals cm of m)"/> met elkaar om een oppervlakte te bekomen. Net zoals met getallen, kunnen we als volgt redeneren:
 
 $$ 4 \cdot 4 = 4^2 \text{ dus } \si{cm} \cdot \si{cm} = \si{cm}^\orange{2}$$
 
