--- a/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/vierhoeken/index.mdx
@@ -14,7 +14,7 @@ Elke **vlakke figuur** die wordt gevormd door **vier zijden** en **vier hoeken**
 
 ![Een illustratie van een vierhoek.](img/vierhoeken.png)
 
-In bovenstaande vierhoek kunnen we ook nog **diagonalen** tekenen. Dit is een **lijnstuk** dat **twee niet-aangrenzende hoekpunten** met elkaar verbindt. In bovenstaande figuur wordt dit dan [AD] en [BC]. {{< mute "Druk op 'Toon uitleg' om deze te zien." >}}
+In bovenstaande vierhoek kunnen we ook nog **diagonalen** tekenen. Dit is een **lijnstuk** dat **twee niet-aangrenzende hoekpunten** met elkaar verbindt. In bovenstaande figuur wordt dit dan [AD] en [BC]. <Mute text="Druk op 'Toon uitleg' om deze te zien."/>
 
 Net zoals bij [driehoeken](../driehoeken) kunnen we ook spreken van **overstaande zijden en hoeken**. 📐 Dit zijn steeds de zijden en hoeken die **het verst** van elkaar liggen. Met andere woorden de hoeken die het **minst met elkaar gemeen** hebben. 
 
