--- a/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/machten/index.mdx
@@ -35,7 +35,7 @@ Een macht met als **exponent $2$** noemen we ook een **kwadraat**.
 
 ## Hoe reken ik een macht uit?
 Nu we weten hoe een macht eruitziet, willen we ook weten hoe we deze kunnen berekenen. 🧮 We nemen hiervoor nog
-even het voorbeeld uit de inleiding {{< mute "($5 \cdot 5 \cdot 5$)" >}}, waarvan we weten dat het gelijk is aan
+even het voorbeeld uit de inleiding <Mute text="($5 \cdot 5 \cdot 5$)"/>, waarvan we weten dat het gelijk is aan
 $5^3$. Hieruit kunnen we het volgende opmaken:
 
 $$ \underbrace{5 \cdot 5 \cdot 5}_{\orange{3}\ factoren} = 5\orange{^3} = 125$$
