--- a/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/optellen_aftrekken/index.mdx
@@ -8,7 +8,7 @@ tags: ["Breuk", "Kommagetallen", "Optellen", "Aftrekken", "Rationale getallen", 
 description: "In deze les leren we hoe we rationale getallen kunnen optellen en
 aftrekken."
 ---
-Je bent nog steeds op een verjaardagsfeestje en het [eerste stukje taart](../breuken/) ($\frac{1}{8}$) is op. 🍰 Blijkbaar is er nog een {{< mute "(even grote)" >}} taart voor zij die willen. Jij en vijf anderen lusten wel nog een stukje. 😋 Deze taart wordt dus in zes gelijke delen verdeeld en jij krijgt hier één stukje van. Hoeveel taart heb je dan in het totaal gegeten? 
+Je bent nog steeds op een verjaardagsfeestje en het [eerste stukje taart](../breuken/) ($\frac{1}{8}$) is op. 🍰 Blijkbaar is er nog een <Mute text="(even grote)"/> taart voor zij die willen. Jij en vijf anderen lusten wel nog een stukje. 😋 Deze taart wordt dus in zes gelijke delen verdeeld en jij krijgt hier één stukje van. Hoeveel taart heb je dan in het totaal gegeten? 
 
 ## Hoe kan ik breuken optellen en aftrekken?
 Uit de inleiding weten we dat je $\frac{1}{8}$ en $\frac{1}{6}$ van twee even grote taarten hebt gegeten. Hoe moeten we deze breuken nu optellen om te weten hoeveel taart je in totaal hebt gegeten?
@@ -17,7 +17,7 @@ Misschien moeten we gewoon tellers en noemers optellen? 🧐 Laten we proberen!
 
 $$\frac{1 + 1}{8 + 6} = \frac{\frac{2}{\orange{2}}}{\frac{14}{\orange{2}}} = \frac{1}{7}$$ 
 
-Dit kàn **niet juist** zijn! Het stuk van $\frac{1}{6}$ is immers op z'n eentje al groter dan $\frac{1}{7}$. {{< mute "Een stuk van een taart dat gedeeld is in meer gelijke stukken is kleiner dan een stuk van een (even grote) taart die in minder stukken is verdeeld." >}} 
+Dit kàn **niet juist** zijn! Het stuk van $\frac{1}{6}$ is immers op z'n eentje al groter dan $\frac{1}{7}$. <Mute text="Een stuk van een taart dat gedeeld is in meer gelijke stukken is kleiner dan een stuk van een (even grote) taart die in minder stukken is verdeeld."/> 
 
 ![Een visuele weergave van de verschillende breuken.](img/teller_noemer_optellen.png)
 
@@ -32,7 +32,7 @@ Als je breuken wilt optellen of aftrekken, moeten ze **altijd gelijknamig** zijn
 
 > Als je de term *gelijknamige breuken* niet herkent, bekijk je best nog even de les over [breuken](../breuken/).
 
-Om breuken gelijknamig te maken, gebruiken we vaak het **kleinst gemeenschappelijk veelvoud** van de noemers. We mogen echter niet zomaar de noemers veranderen zonder de tellers aan te passen. **Teller en noemer** moeten immers steeds **met hetzelfde getal** vermenigvuldigd {{< mute "(of gedeeld)" >}} worden. Als we de noemer dus bijvoorbeeld vermenigvuldigen met $4$, dan vermenigvuldigen we ook de teller met $4$.
+Om breuken gelijknamig te maken, gebruiken we vaak het **kleinst gemeenschappelijk veelvoud** van de noemers. We mogen echter niet zomaar de noemers veranderen zonder de tellers aan te passen. **Teller en noemer** moeten immers steeds **met hetzelfde getal** vermenigvuldigd <Mute text="(of gedeeld)"/> worden. Als we de noemer dus bijvoorbeeld vermenigvuldigen met $4$, dan vermenigvuldigen we ook de teller met $4$.
 
 Aangezien het soms moeilijk is om het kleinst gemeenschappelijk veelvoud te vinden, kan je ook volgend **stappenplan** gebruiken:
 1. Je **vereenvoudigt**, indien mogelijk, de breuken.
@@ -86,7 +86,7 @@ Om kommagetallen op te tellen of af te trekken kan je **twee methoden** gebruike
 
 Eigenlijk rekenen kommagetallen niet veel anders dan gewone getallen. Je moet gewoon zorgen dat er **evenveel getallen** achter de komma staan bij beide getallen. Als er ergens minder getallen zijn, dan **vul je aan met nullen**. Immers, $0{,}1$ is hetzelfde als $0{,}10000...$ 
 
-Vervolgens **doe je alsof de komma er niet staat** en reken je uit. **Vergeet daarna de komma niet terug op de juiste plaats te zetten!** Je moet altijd het aantal {{< mute "(de lengte)" >}} cijfers na de komma behouden. Bijvoorbeeld:
+Vervolgens **doe je alsof de komma er niet staat** en reken je uit. **Vergeet daarna de komma niet terug op de juiste plaats te zetten!** Je moet altijd het aantal <Mute text="(de lengte)"/> cijfers na de komma behouden. Bijvoorbeeld:
 
 $$0.2 + 0.05 = 0.2\green{0} + 0.05 \rightarrow 20 + 5 = 25 \rightarrow 0.25$$
 $$0.752 - 0.57 = 0.752 - 0.57\green{0} \rightarrow 752 - 570 = 182 \rightarrow 0.182$$
