--- a/src/content/lessen/wiskunde/rekenen_rationaal/vermenigvuldigen_delen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vermenigvuldigen_delen/index.mdx
@@ -15,7 +15,7 @@ Twee breuken vermenigvuldigen is heel simpel. We **vermenigvuldigen tellers en n
 
 $$\frac{2}{3} \cdot \frac{1}{2} = \frac{2}{6} = \frac{1}{3}$$
 
-We kunnen ons een chocoladereep 🍫 voorstellen om dit betekenis te geven. Wanneer je hiervan $\frac{2}{3}$ neemt en je mama zegt vervolgens dat je de helft {{< mute "($\frac{1}{2}$)" >}} aan je zus moet geven, dan houd je zelf $\frac{1}{3}$ over.
+We kunnen ons een chocoladereep 🍫 voorstellen om dit betekenis te geven. Wanneer je hiervan $\frac{2}{3}$ neemt en je mama zegt vervolgens dat je de helft <Mute text="($\frac{1}{2}$)"/> aan je zus moet geven, dan houd je zelf $\frac{1}{3}$ over.
 
 In symbolen:
 
@@ -29,7 +29,7 @@ Om twee breuken door elkaar te delen, gebruiken we het feit dat een deling het *
 $$\frac{8}{\orange{1}} \cdot \frac{\green{1}}{4} = \frac{8 \cdot 1}{1 \cdot 4} = \frac{8}{4} = 8 : 4 = 2$$
 
 Hier vallen twee dingen op:
-- We kunnen **elk geheel getal** schrijven als een **breuk met noemer 1**. Immers, $\frac{a}{1} = a$ {{< mute "($a \in \mathbb{R}$)" >}}.
+- We kunnen **elk geheel getal** schrijven als een **breuk met noemer 1**. Immers, $\frac{a}{1} = a$ <Mute text="($a \in \mathbb{R}$)"/>.
 - Het **omgekeerde van een breuk** verkrijg je door de **teller en noemer van plaats te wisselen**.
 
 Om **twee breuken** door elkaar te **delen**, **vermenigvuldig** je het **omgekeerde van de tweede breuk met de eerste breuk**. 
