--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -19,7 +19,7 @@ Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels**
 Een **wortelteken** schrijf je zoals een *V*, maar dan met een streepje links aan het begin en een grote streep boven de bewerking waarvan
 je de wortel neemt.
 
-Een **vierkantswortel** is een **speciale wortel**. Het wordt ook de **tweedemachtswortel** genoemd en is dus precies het omgekeerde van een **tweede macht** of **kwadraat**. Voor de rest van de les focussen we op deze (vierkants)wortel en laten we alle andere wortels {{< mute "zoals derdemachtswortels of achtstemachtswortels" >}} buiten beschouwing.
+Een **vierkantswortel** is een **speciale wortel**. Het wordt ook de **tweedemachtswortel** genoemd en is dus precies het omgekeerde van een **tweede macht** of **kwadraat**. Voor de rest van de les focussen we op deze (vierkants)wortel en laten we alle andere wortels <Mute text="zoals derdemachtswortels of achtstemachtswortels"/> buiten beschouwing.
 
 | Je schrijft  | Je leest het als                     |
 |--------------|--------------------------------------|
@@ -27,7 +27,7 @@ Een **vierkantswortel** is een **speciale wortel**. Het wordt ook de **tweedemac
 
 ## Hoe reken ik een vierkantswortel uit?
 Zoals reeds gezegd in de inleiding, is een vierkantswortel **het omgekeerde van een tweede macht**.
-Dit wil zeggen dat het kwadraat {{< mute "(de tweede macht)" >}} van het resultaat gelijk moet zijn aan het grondtal. Een voorbeeld:
+Dit wil zeggen dat het kwadraat <Mute text="(de tweede macht)"/> van het resultaat gelijk moet zijn aan het grondtal. Een voorbeeld:
 
 $\sqrt{25} = 5$ want $5^2 = 25$
 
