--- a/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
+++ b/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
@@ -14,7 +14,7 @@ Maria en Dirk willen dit weekend van Brussel naar Gent (57 km) rijden en vervolg
 Maria zegt: \"We nemen best de trein, want anders moeten we 86 kilometer met de auto **afleggen** en dat is niet goed voor het milieu.\" Dirk is niet akkoord en zegt: \"Onze **verplaatsing** bedraagt slechts 28 km, dus we kunnen best de auto nemen.\" Wie van beide is juist? 🤔
 
 ## De baan van een beweging
-Vooraleer we kunnen bepalen wie gelijk heeft, moeten we ons eerst afvragen **waar de beweging zich afspeelt**. Dit doen we doormiddel van de **baan**. In het geval van **Maria** {{< mute "die met de trein wil gaan" >}} zal de beweging zich **op de sporen** afspelen. Bij **Dirk** {{< mute "die met de auto wil gaan" >}} zal de verplaatsing zich **op de weg** afspelen.
+Vooraleer we kunnen bepalen wie gelijk heeft, moeten we ons eerst afvragen **waar de beweging zich afspeelt**. Dit doen we doormiddel van de **baan**. In het geval van **Maria** <Mute text="die met de trein wil gaan"/> zal de beweging zich **op de sporen** afspelen. Bij **Dirk** {{< mute "die met de auto wil gaan" >}} zal de verplaatsing zich **op de weg** afspelen.
 
 De **baan** is de verzameling van alle punten die een bewegend voorwerp achtereenvolgens aanneemt.
 
@@ -27,7 +27,7 @@ De **afgelegde weg** is de afstand die **werkelijk wordt doorlopen**. **Maria** 
 
 Zowel Maria als Dirk hebben dus gelijk, elk op hun eigen manier. Het is wel vanzelfsprekend dat **in deze situatie** de **afgelegde weg bruikbaarder** is. De auto vervuilt immers elke afgelegde kilometer. 💨
 
-Als je 's morgens vertrekt in Brussel en 's avonds weer aankomt in Brussel, dan was je **verplaatsing** voor die dag {{< mute "fysisch gesproken" >}} dus **0 km**. Je **afgelegde weg** zal **meer** bedragen.
+Als je 's morgens vertrekt in Brussel en 's avonds weer aankomt in Brussel, dan was je **verplaatsing** voor die dag <Mute text="fysisch gesproken"/> dus **0 km**. Je **afgelegde weg** zal **meer** bedragen.
 
 
 ## Samengevat
