--- a/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/figuren/index.mdx
@@ -18,7 +18,7 @@ De **vlakke meetkunde** speelt zich af in **twee dimensies**, terwijl de **ruimt
 
 En dingen met **één dimensie** dan? 🤔 Wel, die kun je voorstellen op **een enkele rechte** (zoals de getallenas). Je kan dus alleen punten gebruiken als je iets in deze dimensie wilt plaatsen. 
 
-Wil je **in een vlak** {{< mute "dat twee dimensies heeft" >}} iets plaatsen, dan kan je kiezen voor allerlei **vlakke figuren**. Denk hierbij aan trapezia, parallellogrammen, vierkanten, driehoeken... Het is **in de ruimte** {{< mute "die drie dimensies heeft" >}} dat je **ruimtefiguren** tegenkomt. Voorbeelden hiervan zijn de kubus, de balk, de cilinder en de *parallellepipedum* {{< mute "(dat is de overeenkomstige ruimtefiguur van een parallellogram)">}} (we konden deze geweldige naam niet weglaten 😊🎶). 
+Wil je **in een vlak** <Mute text="dat twee dimensies heeft"/> iets plaatsen, dan kan je kiezen voor allerlei **vlakke figuren**. Denk hierbij aan trapezia, parallellogrammen, vierkanten, driehoeken... Het is **in de ruimte** {{< mute "die drie dimensies heeft" >}} dat je **ruimtefiguren** tegenkomt. Voorbeelden hiervan zijn de kubus, de balk, de cilinder en de *parallellepipedum* {{< mute "(dat is de overeenkomstige ruimtefiguur van een parallellogram)">}} (we konden deze geweldige naam niet weglaten 😊🎶). 
 
 ## Enkele vlakke figuren
 Voor de volledigheid vermelden we hier nog even **de vlakke figuren** waarvan je verondersteld wordt ze te kennen. 
@@ -32,7 +32,7 @@ We zijn allemaal wel al eens ruimtefiguren tegengekomen die zijn afgebeeld op ee
 
 ![Een kubus in cavalièreperspectief.](img/cavaliere.png)
 
-Elke (stippel)lijn noemt men een **ribbe** {{< mute "van de kubus" >}}.
+Elke (stippel)lijn noemt men een **ribbe** <Mute text="van de kubus"/>.
 
 <Attention title="Cavalièreperspectief">
 
@@ -75,7 +75,7 @@ De definitie is namelijk voor beide **juist hetzelfde**. Alleen gaat het hier ni
 
 ![Visualisatie van evenwijdige en snijdende vlakken.](img/ligging_vlakken.png)
 
-Als je de twee snijdende vlakken beter bekijkt 🤓, dan kunnen je twee dingen opvallen. Ten eerste vormen **alle snijpunten** samen, {{< mute "dat zijn de punten die in/op beide vlakken liggen," >}} **een rechte**. Ten tweede snijden de twee rechtse vlakken elkaar in dit voorbeeld loodrecht $\alpha \perp \beta$. Had je dit gezien? 👀
+Als je de twee snijdende vlakken beter bekijkt 🤓, dan kunnen je twee dingen opvallen. Ten eerste vormen **alle snijpunten** samen, <Mute text="dat zijn de punten die in/op beide vlakken liggen,"/> **een rechte**. Ten tweede snijden de twee rechtse vlakken elkaar in dit voorbeeld loodrecht $\alpha \perp \beta$. Had je dit gezien? 👀
 
 Ten slotte hebben we het nog even over **kruisende rechten**. Bij deze rechten is het **onmogelijk om ze in één vlak te plaatsen**. Daarmee verschillen ze van evenwijdige en snijdende rechten, waarbij dit wel mogelijk is! 😀
 
