--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -14,7 +14,7 @@ In de [vorige les](../basisbegrippen) hebben we reeds gezien wat een rechte is, 
 
 ![De rechte a is een lijn die oneindig doorloopt](img/rechte.png)
 
-Een **rechte of lijn** is een rechte lijn die **oneindig doorloopt**. Het is dus een **oneindige verzameling punten in één richting**. Maar aangezien het onmogelijk is om een rechte oneindig door te trekken, spreken we af dat elke **onbegrensde** {{< mute "(door een punt)" >}} **lijn** een rechte is. Zoals doet vermoeden is een rechte ook steeds een **rechte lijn** en heeft hij geen gebogen stukken.
+Een **rechte of lijn** is een rechte lijn die **oneindig doorloopt**. Het is dus een **oneindige verzameling punten in één richting**. Maar aangezien het onmogelijk is om een rechte oneindig door te trekken, spreken we af dat elke **onbegrensde** <Mute text="(door een punt)"/> **lijn** een rechte is. Zoals doet vermoeden is een rechte ook steeds een **rechte lijn** en heeft hij geen gebogen stukken.
 
 We kunnen een rechte op twee manieren **benoemen**. Enerzijds **door een kleine letter**, zoals a. Of anderzijds **door twee punten op die rechte**.
 
@@ -23,7 +23,7 @@ We kunnen een rechte op twee manieren **benoemen**. Enerzijds **door een kleine 
 ## Wat is het verschil evenwijdige en snijdende rechten?
 Het verschil tussen een evenwijdige en snijdende rechte is fundamenteel. Het is een verschil zoals dag ☀️ en nacht 🌔.
 
-**Evenwijdige rechten** zijn rechten die overal even ver {{< mute "(letterlijk even wijd)" >}} van elkaar liggen. Als de {{< mute "(loodrechte)" >}} afstand tussen twee rechten bijvoorbeeld overal $1~\si{cm}$ is, dan zijn die rechten evenwijdig. Ze hebben dan **geen enkel punt gemeenschappelijk**. Het kan echter ook dat de afstand tussen twee rechten overal $0~\si{cm}$ is, en dan zijn de rechten òòk evenwijdig. In dat geval vallen de rechten samen en hebben ze dus **al hun punten gemeenschappelijk**. Wanneer rechte $a$ evenwijdig is aan rechte $b$, schrijven we dat als **$a$ // $b$** of **$a \parallel b$**.
+**Evenwijdige rechten** zijn rechten die overal even ver <Mute text="(letterlijk even wijd)"/> van elkaar liggen. Als de {{< mute "(loodrechte)" >}} afstand tussen twee rechten bijvoorbeeld overal $1~\si{cm}$ is, dan zijn die rechten evenwijdig. Ze hebben dan **geen enkel punt gemeenschappelijk**. Het kan echter ook dat de afstand tussen twee rechten overal $0~\si{cm}$ is, en dan zijn de rechten òòk evenwijdig. In dat geval vallen de rechten samen en hebben ze dus **al hun punten gemeenschappelijk**. Wanneer rechte $a$ evenwijdig is aan rechte $b$, schrijven we dat als **$a$ // $b$** of **$a \parallel b$**.
 
 ![Twee evenwijdige rechten vallen oftewel samen of raken elkaar nooit.](img/evenwijdige_rechten.png)
 
@@ -35,7 +35,7 @@ Daarnaast bestaat er ook nog iets zoals **kruisende rechten**. Dit zijn rechten 
 
 ## Een rechte hoek tussen twee loodrechte dragers
 Als je de [vorige les](../basisbegrippen) goed hebt gelezen, dan weet je dat een drager de rechte is waarop een bepaald lijnstuk, halfrechte, punt... ligt.
-Wanneer twee dragers {{< mute "of rechten" >}} **loodrecht** op elkaar liggen, betekent dit dat ze een **rechte hoek** {{< mute "(90°)" >}} vormen. We noteren **$a \perp b$**. 
+Wanneer twee dragers <Mute text="of rechten"/> **loodrecht** op elkaar liggen, betekent dit dat ze een **rechte hoek** {{< mute "(90°)" >}} vormen. We noteren **$a \perp b$**. 
 
 ![Twee rechten die loodrecht op elkaar staan duiden we aan met een speciaal teken. Dit is een kleine rechte hoek in de hoek die 90° is.](img/loodrechte_stand.png)
 
